--- a/index.html
+++ b/index.html
@@ -19,9 +19,34 @@
                 <div class="label">Card 2</div>
             </a>
 
-            <a href="pag-8.html" class="shape-container">
+            <a href="pag-3.html" class="shape-container">
                 <div class="shape">3</div>
                 <div class="label">Card 3</div>
+            </a>
+
+            <a href="pag-4.html" class="shape-container">
+                <div class="shape">4</div>
+                <div class="label">Card 4</div>
+            </a>
+
+            <a href="pag-5.html" class="shape-container">
+                <div class="shape">5</div>
+                <div class="label">Card 5</div>
+            </a>
+
+            <a href="pag-6.html" class="shape-container">
+                <div class="shape">6</div>
+                <div class="label">Card 6</div>
+            </a>
+
+            <a href="pag-7.html" class="shape-container">
+                <div class="shape">7</div>
+                <div class="label">Card 7</div>
+            </a>
+
+            <a href="pag-8.html" class="shape-container">
+                <div class="shape">8</div>
+                <div class="label">Card 8</div>
             </a>
         </div>
     </div>
